test/negative/404_dup_pattern_ident.err
404_dup_pattern_ident.fx:2:9: error: duplicate identifier 'a' in the pattern

1 errors occured during type checking.
